@@ -9,29 +9,28 @@
 <hr>
 
 <ul>
-  <li><a href="fvwm2-man.html">fvwm2.man</a>
+  <li><a href="fvwm2.html">fvwm2.man</a>
 <p>
-  <li><a href="xpmroot-man.html">xpmroot.man</a>
+  <li><a href="xpmroot.html">xpmroot.man</a>
 <p>
-  <li><a href="FvwmAudio-man.html">FvwmAudio.man</a>
-  <li><a href="FvwmAuto-man.html">FvwmAuto.man</a>
-  <li><a href="FvwmBacker-man.html">FvwmBacker.man</a>
-  <li><a href="FvwmBanner-man.html">FvwmBanner.man</a>
-  <li><a href="FvwmButtons-man.html">FvwmButtons.man</a>
-  <li><a href="FvwmCascade-man.html">FvwmCascade.man</a>
-  <li><a href="FvwmCpp-man.html">FvwmCpp.man</a>
-  <li><a href="FvwmForm-man.html">FvwmForm.man</a>
-  <li><a href="FvwmIconBox-man.html">FvwmIconBox.man</a>
-  <li><a href="FvwmIconMan-man.html">FvwmIconMan.man</a>
-  <li><a href="FvwmIdent-man.html">FvwmIdent.man</a>
-  <li><a href="FvwmM4-man.html">FvwmM4.man</a>
-  <li><a href="FvwmPager-man.html">FvwmPager.man</a>
-  <li><a href="FvwmSave-man.html">FvwmSave.man</a>
-  <li><a href="FvwmSaveDesk-man.html">FvwmSaveDesk.man</a>
-  <li><a href="FvwmScroll-man.html">FvwmScroll.man</a>
-  <li><a href="FvwmTalk-man.html">FvwmTalk.man</a>
-  <li><a href="FvwmTile-man.html">FvwmTile.man</a>
-  <li><a href="FvwmWinList-man.html">FvwmWinList.man</a>
+  <li><a href="FvwmAudio.html">FvwmAudio.man</a>
+  <li><a href="FvwmAuto.html">FvwmAuto.man</a>
+  <li><a href="FvwmBacker.html">FvwmBacker.man</a>
+  <li><a href="FvwmBanner.html">FvwmBanner.man</a>
+  <li><a href="FvwmButtons.html">FvwmButtons.man</a>
+  <li><a href="FvwmCpp.html">FvwmCpp.man</a>
+  <li><a href="FvwmForm.html">FvwmForm.man</a>
+  <li><a href="FvwmIconBox.html">FvwmIconBox.man</a>
+  <li><a href="FvwmIconMan.html">FvwmIconMan.man</a>
+  <li><a href="FvwmIdent.html">FvwmIdent.man</a>
+  <li><a href="FvwmM4.html">FvwmM4.man</a>
+  <li><a href="FvwmPager.html">FvwmPager.man</a>
+  <li><a href="FvwmRearrange.html">FvwmRearrange.man</a>
+  <li><a href="FvwmSave.html">FvwmSave.man</a>
+  <li><a href="FvwmSaveDesk.html">FvwmSaveDesk.man</a>
+  <li><a href="FvwmScroll.html">FvwmScroll.man</a>
+  <li><a href="FvwmTalk.html">FvwmTalk.man</a>
+  <li><a href="FvwmWinList.html">FvwmWinList.man</a>
 </ul>
 
 <hr>
