@@ -1,3 +1,7 @@
+1998-11-23  Dan Espen  <dane@mk.bellcore.com>
+
+	* man-pages.html: removed -man from the file names.
+
 1998-11-12  Dan Espen  <dane@mk.bellcore.com>
 
 	* cvs.html (Deleting Directories and Files): Added description of
